<resources>
    <string name="app_name">Proteu Driver</string>
    <string name="action_settings">Settings</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">Name must be between 4 and 15 characters long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="prompt_name">Name</string>
    <string name="no_account_yet_create_one">No account yet? Create one!</string>
    <string name="already_member">Already member? Login!</string>
    <string name="create_account">Create account</string>
</resources>
